--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body
    margin: 0px;
 }
 
-#status
+#status , #number_of_objects
 {
    font-size: 18px;
 }
@@ -20,5 +20,6 @@ canvas
 {
     box-shadow: 10px 10px 10px lightskyblue;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
